...
        android:padding="8dp"
        android:text="Sort Z-A" />

    <!-- Lister ut våre gallery elementer -->
    <androidx.recyclerview.widget.RecyclerView
        android:padding="20dp"
        android:id="@+id/gallery_recycler_view"
        android:layout_width="500dp"
        android:layout_height="match_parent"
        android:layout_below="@id/button_sort_az"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button_add_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:text="Add Entry" />
...
