<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_marginTop="40dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/image_text"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:text="Placeholder" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="Slett" />

    </LinearLayout>

</LinearLayout>
