<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/quiz_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Quiz" />

    <ImageView
        android:id="@+id/imageView_quiz"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true" />

    <Button
        android:id="@+id/button_option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_quiz"
        android:layout_marginTop="6dp"/>

    <Button
        android:id="@+id/button_option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_option1"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/button_option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_option2"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_option3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="Score: 0 / 0"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_marginRight="200dp"
        android:text="Home" />

</RelativeLayout>